<resources>
    <string name="app_name">Timed</string>
    <string name="default_web_client_id">343178520285-8nj0h58mg4mtmrdm7kvj112ehcehqpam.apps.googleusercontent.com</string>
    <string name="legal_agreement">By signing in, you agree to our <b><u><font color="#3B82F6">Terms of Service</font></u></b> and <b><u><font color="#3B82F6">Privacy Policy</font></u></b></string>
    <string name="agree_terms">I agree to the <b><u><font color="#3B82F6">Terms of Service</font></u></b> and <b><u><font color="#3B82F6">Privacy Policy</font></u></b></string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="settings_and_privacy">Settings &amp; Privacy</string>
    <string name="time_timezone">Time &amp; Timezone</string>
    <string name="timezone_settings">Timezone Settings</string>
    <string name="manage_time_zones">Manage time zones</string>

    <string name="conflict_resolver">Conflict Resolver</string>
    <string name="handle_schedule_conflicts">Handle schedule conflicts</string>

    <string name="free_slot_finder">Free Slot Finder</string>
    <string name="find_available_time">Find available time</string>

    <string name="productivity_focus">Productivity &amp; Focus </string>
    <string name="focus_mode">Focus Mode</string>
    <string name="focus_mode_txt">Promodoro timer</string>

    <string name="habit_tracker">Habit Tracker</string>
    <string name="habit_tracker_txt">Track daily habits</string>

    <string name="todays_habits">Today\'s Habits</string>
    <string name="this_week">This Week</string>
    <string name="completed_today">Completed Today</string>
    <string name="new_habit">+ New Habit</string>

    <string name="analytics">Analytics</string>
    <string name="analytics_txt">View productivity statistics</string>

</resources>